[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Game/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HitZone/HitZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Poppins-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 171.008, 299.913 )
scale = Vector2( 1.00267, 1 )
texture = ExtResource( 1 )

[node name="Arrows" type="Node2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
autostart = true

[node name="HitZone" parent="." instance=ExtResource( 3 )]
position = Vector2( 2, 34 )

[node name="DangerZone" parent="HitZone" index="1"]
position = Vector2( 3.2758, -9.57532 )

[node name="CollisionShape2D" parent="HitZone/DangerZone" index="0"]
position = Vector2( 165.639, 546.61 )

[node name="Lives" type="Label" parent="."]
margin_left = 249.053
margin_top = 15.6061
margin_right = 330.053
margin_bottom = 71.6061
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 141.179
margin_top = -2.13383
margin_right = 216.179
margin_bottom = 53.8662
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeOver" type="Label" parent="."]
visible = false
margin_left = 71.7512
margin_top = 166.305
margin_right = 255.751
margin_bottom = 212.305
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
visible = false
margin_left = 80.4982
margin_top = 135.146
margin_right = 264.498
margin_bottom = 181.146
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsEarned" type="Label" parent="GameOver"]
margin_left = 25.118
margin_top = 45.1886
margin_right = 148.118
margin_bottom = 94.1886
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Best mark:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="."]
margin_left = 10.4
margin_top = 16.0
margin_right = 50.4
margin_bottom = 72.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="."]
pause_mode = 2
visible = false
self_modulate = Color( 1, 0.992157, 0.992157, 1 )
margin_left = 104.881
margin_top = 272.0
margin_right = 227.881
margin_bottom = 301.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 0, 0.580392, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Try again!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToMenu" type="Button" parent="."]
pause_mode = 2
visible = false
margin_left = 105.0
margin_top = 316.0
margin_right = 229.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Go to Menu"

[connection signal="decreaseLives" from="." to="." method="_on_Game_decreaseLives"]
[connection signal="hitArrow" from="." to="." method="_on_Game_hitArrow"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_TimerRespawn_timeout"]
[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="GoToMenu" to="." method="_on_GoToMenu_pressed"]

[editable path="HitZone"]
